helm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleservice
  template:
    metadata:
      labels:
        app: simpleservice
    spec:
      containers:
      - name: simpleservice
        image: docker.io/kravikumar15/simpleservice:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
