helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleservice-service
spec:
  selector:
    app: simpleservice
  ports:
    - port: 8080
      targetPort: 8080
