helm/ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
 name: simpleservice-ingress
 lables:
   name: simpleservice
